2018-06-01 Erik Petrich

	* support/scripts/sdcc.nsi: mingw-w64 needs libwinpthread-1.dll
	* support/scripts/sdcc.nsi: add stm8-large library to setup.exe package

2018-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.c:
	  Improve behaviour on unknown register specifications.

2018-05-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2752.c:
	  Test for bug #2752

2018-05-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Fix bug #2753.

2018-05-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/peeph.def:
	  Improve documentation for jump-on-false-style optimization.

2018-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Improve jump-on-false-style optimization.

2018-05-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  support/regression/tests/assert.c,
	  support/valdiag/tests/static_assert.c:
	  Add pragma for C2X, fix pragma for C99.
	* src/stm8/peeph.def:
	  Various optimizations that help in stdcbench.
	* src/stm8/ralloc.c:
	  Improve code for pushing globals.

2018-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Support for C2X static_assert variant.

2018-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/SDCCval.c:
	  Fix use of undefined behaviour (left shift by negative amount).
	* support/regression/tests/bug-2749.c:
	  Test for bug #2749.
	* src/SDCCglue.c:
	  Code cleanup.
	* src/SDCCglobl.h,
	  src/SDCCmem.c,
	  src/SDCCutil.c,
	  src/pic14/genarith.c,
	  src/pic16/genarith.c,
	  src/stm8/peep.c:
	  Code cleanup by relying on ISO C99 support.

2018-05-08 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2746.c:
	  Test for bug #2746.
	* src/stm8/peep.c:
	  Fix reads from unallocated memory.

2018-04-25 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdbool.h: